<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="100"
    android:background="@color/wallpaper"
    tools:context=".AdvancedCalcActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="95">
        <LinearLayout
            android:weightSum="100"
            android:layout_gravity="start"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btnBack"
                android:layout_marginEnd="10dp"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_gravity="start"
                android:background="@color/wallpaper"
                android:contentDescription="@string/button_back_description"
                android:onClick="onBackButtonClick"
                android:src="@drawable/back"/>

            <TextView
                android:id="@+id/tvResult"
                android:layout_weight="100"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="@color/button"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="@color/text"
                android:textSize="30sp"/>
        </LinearLayout>
        <GridLayout
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="5"
            android:rowCount="7">
            <Button
                android:id="@+id/buttonXPowY"
                android:layout_width="75dp"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:backgroundTint="@color/advanced_button"
                android:text="@string/button_x_pow_y_text"
                android:textSize="24sp"
                android:onClick="onBinaryOperatorButtonClick"
                android:layout_row="1"
                android:layout_column="0"/>
            <Button
                android:id="@+id/btnLg"
                android:textAllCaps="false"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:text="@string/button_lg_text"
                android:backgroundTint="@color/advanced_button"
                android:textSize="24sp"
                android:onClick="onUnaryOperatorClick"
                android:layout_row="1"
                android:layout_column="1"/>
            <Button
                android:id="@+id/btnLn"
                android:textAllCaps="false"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:text="@string/button_ln_text"
                android:backgroundTint="@color/advanced_button"
                android:textSize="24sp"
                android:onClick="onUnaryOperatorClick"
                android:layout_row="1"
                android:layout_column="2"/>
            <Button
                android:id="@+id/btnAbs"
                android:layout_width="75dp"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:text="@string/button_abs_text"
                android:textSize="24sp"
                android:backgroundTint="@color/advanced_button"
                android:onClick="onUnaryOperatorClick"
                android:layout_row="1"
                android:layout_column="3"/>
            <Button
                android:id="@+id/btnExp"
                android:layout_width="75dp"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:text="@string/button_exp_text"
                android:textSize="24sp"
                android:onClick="onUnaryOperatorClick"
                android:backgroundTint="@color/advanced_button"
                android:layout_row="1"
                android:layout_column="4"/>

            <Button
                android:id="@+id/btnSquareRoot"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="2"
                android:layout_column="0"
                android:onClick="onUnaryOperatorClick"
                android:backgroundTint="@color/advanced_button"
                android:text="@string/button_square_root_text"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btnClear"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:onClick="onClearButtonClick"
                android:text="@string/button_clear_text"
                android:backgroundTint="@color/accent"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btnErase"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:text="@string/button_erase_text"
                android:backgroundTint="@color/accent"
                android:textSize="24sp"
                android:onClick="onEraseButtonClick"
                android:layout_row="2"
                android:layout_column="2"/>
            <Button
                android:id="@+id/btnPercentage"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:text="@string/button_percentage_text"
                android:textSize="24sp"
                android:onClick="onUnaryOperatorClick"
                android:layout_row="2"
                android:backgroundTint="@color/accent"
                android:layout_column="3"/>
            <Button
                android:id="@+id/btnDivide"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="4"
                android:onClick="onBinaryOperatorButtonClick"
                android:text="@string/button_divide_text"
                android:backgroundTint="@color/accent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnFactorial"
                android:layout_width="75dp"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/advanced_button"
                android:text="@string/button_factorial_text"
                android:textSize="24sp"
                android:onClick="onUnaryOperatorClick"
                android:layout_row="3"
                android:layout_column="0"/>
            <Button
                android:id="@+id/btn7"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_7_text"
                android:backgroundTint="@color/button"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn8"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="2"
                android:backgroundTint="@color/button"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_8_text"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn9"
                android:layout_width="75dp"
                android:backgroundTint="@color/button"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="3"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_9_text"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="4"
                android:onClick="onBinaryOperatorButtonClick"
                android:text="@string/button_multiply_text"
                android:backgroundTint="@color/accent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnInverse"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:textAllCaps="false"
                android:backgroundTint="@color/advanced_button"
                android:layout_column="0"
                android:onClick="onUnaryOperatorClick"
                android:text="@string/button_inverse_text"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn4"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:backgroundTint="@color/button"
                android:layout_column="1"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_4_text"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn5"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:backgroundTint="@color/button"
                android:layout_column="2"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_5_text"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn6"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:backgroundTint="@color/button"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="3"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_6_text"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btnMinus"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="4"
                android:onClick="onBinaryOperatorButtonClick"
                android:text="@string/button_minus_text"
                android:backgroundTint="@color/accent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnPi"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/advanced_button"
                android:text="@string/button_pi_text"
                android:textSize="24sp"
                android:textAllCaps="false"
                android:onClick="onPiButtonClick"
                android:layout_row="5"
                android:layout_column="0"/>
            <Button
                android:id="@+id/btn1"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="1"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_1_text"
                android:backgroundTint="@color/button"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn2"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="2"
                android:backgroundTint="@color/button"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_2_text"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btn3"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="3"
                android:backgroundTint="@color/button"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_3_text"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btnPlus"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="4"
                android:onClick="onBinaryOperatorButtonClick"
                android:text="@string/button_plus_text"
                android:backgroundTint="@color/accent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnSimpleCalc"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/button_simple_text"
                android:backgroundTint="@color/accent"
                android:textSize="24sp"
                android:textColor="@color/text"
                android:onClick="onSimpleCalcButtonClick"
                android:layout_row="6"
                android:layout_column="0"/>
            <Button
                android:id="@+id/btnE"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/button_e_text"
                android:backgroundTint="@color/advanced_button"
                android:textSize="24sp"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:onClick="onEButtonClick"
                android:layout_row="6"
                android:layout_column="1"/>
            <Button
                android:id="@+id/btn0"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_row="6"
                android:layout_column="2"
                android:backgroundTint="@color/button"
                android:textColor="@color/text"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_0_text"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btnDecimal"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="6"
                android:backgroundTint="@color/button"
                android:layout_column="3"
                android:onClick="onDecimalButtonClick"
                android:text="@string/button_decimal_text"
                android:textSize="24sp" />
            <Button
                android:id="@+id/btnEqual"
                android:layout_width="75dp"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="6"
                android:layout_column="4"
                android:backgroundTint="@color/accent"
                android:onClick="onEqualButtonClick"
                android:text="@string/button_equal_text"
                android:textSize="24sp" />
        </GridLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_weight="5"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/button"
            android:onClick="onExitButtonClick"
            android:text="@string/button_exit_text"
            android:textAllCaps="false"
            android:textColor="@color/text"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>