<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wallpaper"
    android:weightSum="100"
    android:orientation="vertical"
    tools:context=".SimpleCalcActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="95">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_gravity="start"
                android:layout_marginEnd="10dp"
                android:background="@color/wallpaper"
                android:contentDescription="@string/button_back_description"
                android:onClick="onBackButtonClick"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="100"
                android:background="@color/button"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="@color/text"
                android:textSize="30sp" />
        </LinearLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:columnCount="4"
            android:rowCount="6">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginEnd="5dp"
                android:onClick="onClearButtonClick"
                android:text="@string/button_clear_text"
                android:backgroundTint="@color/accent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnErase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginEnd="5dp"
                android:onClick="onEraseButtonClick"
                android:text="@string/button_erase_text"
                android:backgroundTint="@color/accent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginEnd="5dp"
                android:onClick="onPercentageButtonClick"
                android:text="@string/button_percentage_text"
                android:backgroundTint="@color/accent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="0"
                android:layout_column="3"
                android:onClick="onOperatorButtonClick"
                android:text="@string/button_divide_text"
                android:backgroundTint="@color/accent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="1"
                android:layout_column="0"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_7_text"
                android:backgroundTint="@color/button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="1"
                android:layout_column="1"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_8_text"
                android:backgroundTint="@color/button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="1"
                android:layout_column="2"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_9_text"
                android:backgroundTint="@color/button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="3"
                android:onClick="onOperatorButtonClick"
                android:text="@string/button_multiply_text"
                android:backgroundTint="@color/accent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="2"
                android:layout_column="0"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_4_text"
                android:backgroundTint="@color/button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="2"
                android:layout_column="1"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_5_text"
                android:backgroundTint="@color/button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="2"
                android:layout_column="2"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_6_text"
                android:backgroundTint="@color/button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="2"
                android:layout_column="3"
                android:onClick="onOperatorButtonClick"
                android:text="@string/button_minus_text"
                android:backgroundTint="@color/accent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="3"
                android:layout_column="0"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_1_text"
                android:backgroundTint="@color/button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="3"
                android:layout_column="1"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_2_text"
                android:backgroundTint="@color/button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="3"
                android:layout_column="2"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_3_text"
                android:backgroundTint="@color/button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="3"
                android:layout_column="3"
                android:onClick="onOperatorButtonClick"
                android:text="@string/button_plus_text"
                android:backgroundTint="@color/accent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnAdvancedCalc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="4"
                android:layout_column="0"
                android:onClick="onAdvancedCalcButtonClick"
                android:text="@string/button_advanced_text"
                android:backgroundTint="@color/accent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="4"
                android:layout_column="1"
                android:onClick="onDigitButtonClick"
                android:text="@string/button_0_text"
                android:backgroundTint="@color/button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:layout_row="4"
                android:layout_column="2"
                android:onClick="onDecimalButtonClick"
                android:text="@string/button_decimal_text"
                android:backgroundTint="@color/button"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:backgroundTint="@color/accent"
                android:layout_row="4"
                android:layout_column="3"
                android:onClick="onEqualButtonClick"
                android:text="@string/button_equal_text"
                android:textSize="24sp" />
        </GridLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_weight="5"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/button"
            android:onClick="onExitButtonClick"
            android:text="@string/button_exit_text"
            android:textAllCaps="false"
            android:textColor="@color/text"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>